semi colon problem solved
there was syntax error caused  because of writing ";"  after @RenderBody()

--- a/HealthCentreCare/Views/Shared/_CommonLayout2.cshtml
+++ b/HealthCentreCare/Views/Shared/_CommonLayout2.cshtml
@@ -43,7 +43,7 @@
     <!-- Features Section -->
     <section id="features" class="py-5">
         <div class="container">
-			@RenderBody();
+			@RenderBody()
         </div>
     </section>
 
