--- a/HealthCentreCare/Views/Shared/_CommonLayout.cshtml
+++ b/HealthCentreCare/Views/Shared/_CommonLayout.cshtml
@@ -51,7 +51,7 @@
     <!-- Features Section -->
     <section id="features" class="py-5">
         <div class="container">
-            @RenderBody();
+            @RenderBody()
         </div>
     </section>
     <!-- footer section start  -->
