--- a/HealthCentreCare/Views/Home/New_Registration.cshtml
+++ b/HealthCentreCare/Views/Home/New_Registration.cshtml
@@ -96,10 +96,11 @@
             </div>
 
 
-
             <div class="text-center">
-                <button type="submit" class="btn btn-success btn-lg">Register</button>
+                <button type="submit" class="btn btn-outline-dark btn-lg" style="background-color: #0d6efd; color: white;">Register</button>
             </div>
+
+           
         }
     </div>
 </div>
