--- a/HealthCentreCare/Views/Home/Appointment.cshtml
+++ b/HealthCentreCare/Views/Home/Appointment.cshtml
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <button type="submit" class="btn btn-success btn-lg">Book Appointment</button>
+                <button type="submit" class="btn btn-info btn-lg">Book Appointment</button>
             </div>
         }
     </div>
