--- a/HealthCentreCare/Views/Home/New_Registration.cshtml
+++ b/HealthCentreCare/Views/Home/New_Registration.cshtml
@@ -107,5 +107,5 @@
 
 
        
-
+@* for custom color -- <button type="submit" class="btn btn-outline-dark btn-lg" style="background-color: #0d6efd; color: white;">Register</button> *@
  
