--- a/HealthCentreCare/Views/Shared/_CommonLayout2.cshtml
+++ b/HealthCentreCare/Views/Shared/_CommonLayout2.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
         <div class="container">
             <a class="navbar-brand" href="#">Health Care Centre</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -23,9 +23,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="~/Home/Home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="~/Home/Login">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="~/Home/Appointment">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="~/Home/">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="~/Home/Login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="~/Home/Appointment">Book Appointmnet</a></li>
+                    <li class="nav-item"><a class="nav-link" href="~/Home/New_Registration">Sign up</a></li>
 
                 </ul>
             </div>
